<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/Linear01"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical">

<TableLayout 
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent" android:layout_marginBottom="20dip">
    
    <TableRow 
        android:layout_gravity="center_horizontal" android:baselineAligned="true" android:layout_height="wrap_content" android:layout_width="fill_parent">


<LinearLayout android:id="@+id/Linear10" 
	android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="1">

	<RelativeLayout android:id="@+id/Linear11"
	android:layout_height="wrap_content" android:background="@drawable/header"
	android:gravity="fill_vertical" android:layout_width="fill_parent" android:layout_weight="1">


		<ImageView android:adjustViewBounds="true" android:id="@+id/logo"
			android:layout_height="40dip" android:scaleType="fitCenter"
			android:layout_width="wrap_content" android:layout_marginBottom="1dip"
			android:layout_marginTop="1dip" android:src="@drawable/menu"
			android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginLeft="10dip"></ImageView>


		<TextView android:id="@+id/tv" android:layout_width="wrap_content"
			android:textSize="18sp" android:gravity="center" android:layout_marginLeft="5dip"
			android:shadowDx="1" android:shadowDy="1" android:shadowRadius="2"
			android:text="@string/app_name" android:layout_toRightOf="@+id/logo"
			android:layout_height="wrap_content" android:layout_centerVertical="true" android:shadowColor="#000000" android:textColor="#FFFFFF"></TextView>
	</RelativeLayout>

</LinearLayout>

	
 </TableRow>
    <TableRow 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_gravity="center_horizontal" android:layout_weight="1">
        <LinearLayout 
            android:layout_height="fill_parent" android:orientation="vertical" android:layout_width="wrap_content">
            <ListView 
                android:id="@android:id/list"
                android:scrollbars="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                 android:scrollbarAlwaysDrawVerticalTrack="true" android:smoothScrollbar="true" android:background="@drawable/wallpaper"/>
        </LinearLayout>
    </TableRow>
</TableLayout>
     <LinearLayout android:layout_height="wrap_content" android:layout_marginTop="-20dip" android:layout_width="fill_parent" android:gravity="center" android:id="@+id/LinearLayout06" android:background="#393c39">
        <TextView android:id="@+id/TextView01" android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="fill_parent" android:gravity="center" android:text="@string/by" android:layout_marginRight="4dip"></TextView>
        <TextView android:id="@+id/email" android:layout_width="wrap_content" android:textSize="12sp" android:layout_height="fill_parent" android:gravity="center" android:text="@string/email" android:textColor="#6677ff" android:layout_marginLeft="5dip"></TextView>

        </LinearLayout>
        </LinearLayout>